<resources>
    <string name="app_name">Shreya Ghoshal-Melody Queen</string>
    <string name="profile">Profile</string>
    <string name="shreya_s_tweets">Shreya\'s Tweets</string>
    <string name="shreya_ghoshal">Shreya Ghoshal</string>
    <string name="dob">Date of Birth</string>
    <string name="zodaic_sign">Zodaic Sign</string>
    <string name="pisces">Pisces</string>
    <string name="birth_place">Birth Place</string>
    <string name="baharampur_west_bengal">Baharampur, West Bengal</string>
    <string name="atomic_energy_central_school_in_rawatbhata">Atomic Energy Central School in Rawatbhata.</string>
    <string name="school">School</string>
    <string name="college">College</string>
    <string name="sies_college_of_arts_science_and_commerce_mumbai">SIES College of Arts, Science and Commerce, Mumbai</string>
    <string name="marital_status">Marital Status</string>
    <string name="married">Married</string>
    <string name="shreya_s_family">Shreya\'s Family</string>
    <string name="bishwajit_ghoshal">Bishwajit Ghoshal</string>
    <string name="sarmistha_ghoshal">Sarmistha Ghoshal</string>
    <string name="soumyadeep_ghoshal">Soumyadeep Ghoshal</string>
    <string name="shiladitya">Shiladitya Mukhopadhyaya</string>
    <string name="sherlock">Sherlock Ghoshal</string>
    <string name="father_des">Her father, Bishwajit Ghoshal is an electrical engineer and works for the Nuclear Power Corporation of India.</string>
    <string name="mother_des">Her mother, Sarmistha Ghoshal, is a literature post-graduate.Her mother used to help Shreya in her rehearsals.</string>
    <string name="brother_des">Shreya may be daddy\'s little girl, but her brother is the one who will hold the window open for her while she sneak out.</string>
    <string name="shil_des">Shreya married her childhood friend Shiladitya.| Tech Entrepreneur . They were friends for almost 10 years.</string>
    <string name="dog_des">Although dogs look very different from people, they share many of our body’s characteristics. Sherlock remains in her family.</string>
    <string name="special_day">Special day</string>
    <string name="sg_day_text">"In case you didn't know, June 26th is declared as Shreya Ghoshal Day. In 2010, during Shreya's summer tour to US, our prolific playback singer, received this honour from the State of Ohio. Governor Ted Strickland issued a proclamation declaring June 26 as Shreya Ghoshal Day.
The singer was extremely thrilled and took to her micro blogging site, expressing her happiness and shared the news with her fans. Shreya wrote,"I am extremely honoured and very overwhelmed right now. This is a moment I will never forget." She went on to add, "26th june became the Shreya Ghoshal day, its a big honour for me. I feel extremely touched."
Shreya's massive fan following too was overwhelmed with her achievement. Her Twitter handle was flooded with greetings from all her well wishers and fans. #ShreyaGhoshalDay was amongst the trending topics that day.</string>
    <string name="sg_wax">&#160;&#160;&#160;&#160;&#160; Shreya Ghoshal sure is treading new heights. With Madame Tussauds has come to Delhi, one of the unexpected names of celeb statues that has surfaced is that of singer Shreya Ghoshal.
\n \n The statue has been created in a distinctive singing pose, and opened to the public at the museum, Regal Palace, in the heart of Delhi.

        Delighted with such a prestigious position, Shreya Ghoshal said, \n \n <i>\"I am thrilled to be a part of history here at Madame Tussauds, and it is an honour to be featured among such talented stars, artists, historians and renowned celebrities. To be immortalised forever is a fabulous feeling. With its brilliant concept, Madame Tussauds has always been famous for bringing joy all across the world.\"</i>

</string>
    <string name="sg_statue">&#160;&#160;&#160;&#160;&#160; Madame Tussauds was opened on Dec 1, 2017. There was many people to look around the statue.</string>
    <string name="biography">Biography</string>
    <string name="earlier_life">Earlier Life</string>
    <string name="earl_des_"> &#160;&#160;&#160;&#160;&#160; At the age of 4, she started learning music, mainly Bengali songs, from her first Guru – her mother. She gave her first stage performance at their club’s annual function. At the age of 6, she started getting formal training in Hindustani Classical Music. She learnt Classical Hindustani Music from Rakesh Sharmaji of Kota, Shri Jayawardhan Bhatnagar, her school\'s music teacher and thereafter, from Mahesh Chandra Sharmaji of Kota. She got her intial exposure to hindi film songs and rajasthani folk from Shri Bhatnagar. She received training in playback singing from Padmashree Late Kalyanji Bhai at later stage. After shifting to Mumbai she continued her training in Classical Hindustani Music with Late Mukta Bhideji.</string>
    <string name="milestones">Milestones</string>
    <string name="milestone_des"><b>1995</b> She won the All India Light Vocal Music Competition, New Delhi, organised by Sangam Kala Group, in Light Vocal group in sub-junior level. Eminent judges Kalyanji-Anandji and Pt.Rajan and Sajan Mishra judged her at various stages. Her first TV performance followed this. It was a programme called “Awaz Nayi Andaz Wohi” in EL TV. This was her first experience in studio recording.
        \n \n 1996 She was selected for 75th Children’s Special Episode of TVS Sa Re Ga Ma, which she won. Later on she won various other episodes of TVS Sa Re Ga Ma the last one being the Megafinal judged by exceptional panel of judges comprising of Ustat Vilayet Khan, Anil Biswasji, Girija Deviji, Pandit Ram Narain, Pandit Shiv Kumar Sharma and Ustad Zakir Hussain. \n \n 1998 She started recording in regional languages (Marathi, Bengali, etc.). \n \n 2000 Sanjay Bhansaliji and music director Ismail Darbarji selected her for playbacking for Paro played by Aishwarya Rai, in DEVDAS. 2002 She was launched as playback singer with the release of DEVDAS music.</string>
    <string name="career">Career</string>
    <string name="bollywood_debut">Bollywood Debut</string>
    <string name="exp_sg">&#160;&#160;&#160;&#160;&#160;Shreya made her debut in Bollywood film Devdas, After her recording she shared the experience that, \n  <i> "\"\ I remember I was asked to rehearse the song once before finally recording it. I simply closed my eyes and sang without a break. When I opened my eyes, I noticed a lot of excitement and chaos outside the recording room. Then Sanjayji told me I had sung the song so well that they had recorded it at one go. \"\ </i></string>
    <string name="concert_and_other_activities">Concert and other Activities</string>
    <string name="concert_des">&#160;&#160;&#160;&#160;&#160; Shreya performs in musical concerts around the world. \n \n &#160;&#160;&#160;&#160;&#160;  She made London tours where she performed twice in Royal Albert Hall in 2013 and 2014. On the first tour in 2013, she also celebrate 100 years of Bollywood by performing many of the old Bollywood hits songs. \n \n &#160;&#160;&#160;&#160;&#160;  In 2006, she along with Nigam, recorded the title track Haath Se Haath Milaa for the album put together by the BBC World Service Trust as part of an AIDSawareness campaign, where profits garnered through the album, was donated to HIV charities. \n \n &#160;&#160;&#160;&#160;&#160; In 2011, Shreya became the brand ambassador for Joyalukkas jewellery.</string>
    <string name="media_image">Media Image</string>
    <string name="media_des">&#160;&#160;&#160;&#160;&#160; Shreya is active on social media. She is the sixth most liked Indian personality on Facebook and 47th most followed Indian personality on Twitter, according to the statistics of Socialbakers. \n \n &#160;&#160;&#160;&#160;&#160; She is among the top ten most searched Indian singers on Google Search.\n \n &#160;&#160;&#160;&#160;&#160; In March 2017, she became the first Indian singer to have a wax figure of her made for the display in Indian wing of Madame Tussauds Museum in Delhi.</string>
    <string name="awards">Awards</string>
    <string name="sg_details">&#160;&#160;&#160;&#160;&#160;  Shreya, best known as a singer in Hindi, she also sings in other Indian languages including Malayalam, Tamil, Telugu, Kannada, Marathi, Gujarati, Bengali, Assamese, Nepali, Oriya, Bhojpuri, Punjabi, Urdu, Tulu etc. and has established herself as a leading playback singer of Indian cinema.</string>
    <string name="national_awards">National Awards</string>
    <string name="n_award">&#160;&#160;&#160;&#160;&#160; The National Film Awards is the most prestigious film award ceremony in India. Established in 1954, it is administered by the International Film Festival of India and the Indian government\'s Directorate of Film Festivals. The awards are presented by the President of India. Due to their national scale, they are considered to be the equivalent of the American Academy Awards. Shreya has received four awards. \n \n Shreya is the only person who holds 4 National awards at younger age.</string>
    <string name="filmfare_awards">Filmfare Awards</string>
    <string name="film_des">&#160;&#160;&#160;&#160;&#160; Shreya has received 15 Filmfare awards in total. She almost gets filmfare every year in her musical career.</string>
    <string name="more">To Know about more awards</string>
    <string name="click_here">Click here</string>
    <string name="music">Music</string>
    <string name="sg_album">Shreya has also released two independent albums which made SG fans to go crazy.</string>
    <string name="dk">Dhadkane Azad Hain - Shreya\'s Single</string>
    <string name="tere_bina_shreya_s_single">Tere Bina - Shreya\'s Single</string>
    <string name="songs_sg">Here are some songs of Shreya</string>
    <string name="hindi_songs_download">Listen to Hindi Songs</string>
    <string name="telugu_songs_download">Listen to Telugu Songs</string>
    <string name="tamil_songs_download">Listen to Tamil Songs</string>
    <string name="malayalam_songs_download">Listen to Malayalam Songs</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="application_created_by">Application\'s idea was designed and created by..</string>
    <string name="sg_offl">Connect with Shreya Ghoshal\'s Official Accounts here :</string>
    <string name="facebook">Facebook</string>
    <string name="fb_sg_add">facebook.com/shreyaghoshal</string>
    <string name="fb_srb_add">facebook.com/shriram.baabu</string>
    <string name="twitter">Twitter</string>
    <string name="twitter_add">twitter.com/shreyaghoshal</string>
    <string name="twitter_add_srb">twitter.com/shriram_baabu</string>
    <string name="instagram">Instagram</string>
    <string name="insta_add">instagram.com/shreyaghoshal</string>
    <string name="insta_add_srb">instagram.com/shriram_baabu</string>
    <string name="about_us">About us</string>
    <string name="a_few_about_me">A few about me :</string>
    <string name="sg_response">Here is the few responses of Shreya to me :</string>
    <string name="feature">Feedbacks and improvements of App\'s feature are welcomed. Connect with me through social networks to improve App.</string>
    <string name="feature_gmail">Connect with me through email to share your feedback and improve App </string>
    <string name="about_me_detail">&#160;&#160;&#160;&#160;&#160; I am a very mad fan of Shreya Ghoshal since my school age. I have completed my college and working as an Android developer for past few months. Like all SG fans, my wish is also to see her in Concert and to take photo with Shreya. I want to make myself unique to Shreya. This made me to develop this app. This app was developed only by me with all love for Shreya. \n \n \"\ I love the idea of waking up to a song. It could be any Shreya Ghoshal song.\"</string>
</resources>