<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="srb.com.shreyaghoshal_melodyqueen.ConectActivity">

    <ImageView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/sg_black" />

    <RelativeLayout
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorTransparent"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:paddingEnd="36dp"
            android:text="@string/application_created_by"
            android:textColor="@color/colorOrange"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_keyboard_arrow_right_white_24dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sg_link"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/create"
        android:layout_margin="8dp"
        android:background="@color/colorTransparent">

        <TextView
            android:id="@+id/sg_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/sg_offl"
            android:textColor="@color/colorOrange"
            android:textSize="20sp"
            android:textStyle="bold" />


        <RelativeLayout
            android:id="@+id/sg_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sg_text"
            android:layout_margin="4dp">


            <TextView
                android:id="@+id/fb_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/facebook"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fb_head_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fb_head"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/fb_sg_add"
                android:textColor="@android:color/white"
                android:textSize="18sp" />


            <ImageView
                android:id="@+id/fb_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/fb" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sg_twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sg_fb"
            android:layout_margin="4dp">

            <TextView
                android:id="@+id/tw_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/twitter"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tw_head_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tw_head"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/twitter_add"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/tw_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/twitter" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/sg_insta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sg_twitter"
            android:layout_margin="4dp">

            <TextView
                android:id="@+id/inst_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/instagram"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/inst_head_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inst_head"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/insta_add"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/inst_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/insta" />


        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>
